# risc0-verifier

./: .gitignore  Cargo.toml  HEADER-APACHE2  HOWTO_ADD_NEW_VM_VERSION.md  Makefile.toml  README.md  build.rs
.cargo/: audit.toml
.github/workflows/: CI-ci-remote.yml  CI-coverage.yml  CI-risc0-deps-alert.yml
benches/: base.rs
benches/utils/: mod.rs
generate_proofs/: .gitignore  notes.md
generate_proofs/host/: Cargo.toml
generate_proofs/host/method/: info.txt  method
generate_proofs/host/method-1.0.1/: info.txt  method
generate_proofs/host/method-1.0.5/: info.txt  method
generate_proofs/host/method-1.1.1/: info.txt  method
generate_proofs/host/method-1.1.3/: info.txt  method
generate_proofs/host/method-1.2.0/: info.txt  method
generate_proofs/host/method-1.3.0/: info.txt  method
generate_proofs/host/method-2.1.0/: info.txt  method
generate_proofs/host/method-2.2.0/: info.txt  method
generate_proofs/host/method-2.3.0/: info.txt  method
generate_proofs/host/method-3.0.0/: info.txt  method
generate_proofs/host/src/: main.rs
generate_proofs/methods/: Cargo.toml  build.rs
generate_proofs/methods/guest/: Cargo.toml
generate_proofs/methods/guest/src/: main.rs
generate_proofs/methods/src/: lib.rs
header-fix/: Cargo.toml
header-fix/src/: main.rs
resources/: info.txt  valid_proof_1.json  valid_proof_2.json
resources/cases/: poseidon2_22_segment_20.json
resources/cases/prover_1.0.3/vm_1.0.1/: poseidon2_16.json  poseidon2_22.json  sha_16.json  sha_22.json  succinct_16.json  succinct_22.json
resources/cases/prover_1.0.3/vm_1.0.5/: poseidon2_16.json  poseidon2_22.json  sha_16.json  sha_22.json  succinct_16.json  succinct_22.json
resources/cases/prover_1.0.3/vm_1.1.1/: poseidon2_16.json  poseidon2_22.json  sha_16.json  sha_22.json  succinct_16.json  succinct_22.json
resources/cases/prover_1.0.3/vm_1.1.3/: poseidon2_16.json  poseidon2_22.json  sha_16.json  sha_22.json  succinct_16.json  succinct_22.json
resources/cases/prover_1.0.3/vm_1.2.0/: poseidon2_16.json  poseidon2_22.json  sha_16.json  sha_22.json  succinct_16.json  succinct_22.json
resources/cases/prover_1.1.3/vm_1.0.1/: poseidon2_16.json  poseidon2_22.json  sha_16.json  sha_22.json  succinct_16.json  succinct_22.json
resources/cases/prover_1.1.3/vm_1.0.5/: poseidon2_16.json  poseidon2_22.json  sha_16.json  sha_22.json  succinct_16.json  succinct_22.json
resources/cases/prover_1.1.3/vm_1.1.1/: poseidon2_16.json  poseidon2_22.json  sha_16.json  sha_22.json  succinct_16.json  succinct_22.json
resources/cases/prover_1.1.3/vm_1.1.3/: poseidon2_16.json  poseidon2_22.json  sha_16.json  sha_22.json  succinct_16.json  succinct_22.json
resources/cases/prover_1.1.3/vm_1.2.0/: poseidon2_16.json  poseidon2_22.json  sha_16.json  sha_22.json  succinct_16.json  succinct_22.json
resources/cases/prover_1.2.0/vm_1.0.1/: poseidon2_16.json  poseidon2_22.json  sha_16.json  sha_22.json  succinct_16.json  succinct_22.json
resources/cases/prover_1.2.0/vm_1.0.5/: poseidon2_16.json  poseidon2_22.json  sha_16.json  sha_22.json  succinct_16.json  succinct_22.json
resources/cases/prover_1.2.0/vm_1.1.1/: poseidon2_16.json  poseidon2_22.json  sha_16.json  sha_22.json  succinct_16.json  succinct_22.json
resources/cases/prover_1.2.0/vm_1.1.3/: poseidon2_16.json  poseidon2_22.json  sha_16.json  sha_22.json  succinct_16.json  succinct_22.json
resources/cases/prover_1.2.0/vm_1.2.0/: poseidon2_16.json  poseidon2_22.json  sha_16.json  sha_22.json  succinct_16.json  succinct_22.json
resources/cases/prover_1.3.0/vm_1.0.1/: poseidon2_16.json  poseidon2_22.json  sha_16.json  sha_22.json  succinct_16.json  succinct_22.json
resources/cases/prover_1.3.0/vm_1.0.5/: poseidon2_16.json  poseidon2_22.json  sha_16.json  sha_22.json  succinct_16.json  succinct_22.json
resources/cases/prover_1.3.0/vm_1.1.1/: poseidon2_16.json  poseidon2_22.json  sha_16.json  sha_22.json  succinct_16.json  succinct_22.json
resources/cases/prover_1.3.0/vm_1.1.3/: poseidon2_16.json  poseidon2_22.json  sha_16.json  sha_22.json  succinct_16.json  succinct_22.json
resources/cases/prover_1.3.0/vm_1.2.0/: poseidon2_16.json  poseidon2_22.json  sha_16.json  sha_22.json  succinct_16.json  succinct_22.json
resources/cases/prover_1.3.0/vm_1.3.0/: poseidon2_16.json  (+5 more)
resources/cases/single_full_segment/: poseidon2_16.json  poseidon2_17.json  poseidon2_18.json  poseidon2_19.json  poseidon2_20.json  poseidon2_21.json  sha-256_16.json  sha-256_18.json  sha-256_19.json  sha_17.json  sha_20.json  sha_21.json
resources/cases/single_full_segment_v1/: poseidon2_16.json  poseidon2_17.json  poseidon2_18.json  poseidon2_19.json  poseidon2_20.json  poseidon2_21.json  sha-256_16.json  sha-256_17.json  sha-256_18.json  sha-256_19.json  sha-256_20.json  sha-256_21.json
resources/cases/single_full_segment_v2/: poseidon2_16.json  poseidon2_17.json  poseidon2_18.json  poseidon2_19.json  poseidon2_20.json  poseidon2_21.json  poseidon2_22.json
resources/cases/single_full_segment_v3/: poseidon2_16.json  poseidon2_17.json  poseidon2_18.json  poseidon2_19.json  poseidon2_20.json  poseidon2_21.json  poseidon2_22.json
resources/guest_1/: guest_1  guest_elf_1.json  main.rs
resources/guest_2/: guest_2  guest_elf_2.json  main.rs
resources/old/: valid_proof_1.json  valid_proof_2.json
resources/old/guest_1/: main.rs
resources/old/guest_2/: main.rs
scripts/: add_header_if_missing.sh
src/: circuit.rs  context.rs  deserializer.rs  key.rs  lib.rs  poseidon2_injection.rs  proof.rs  receipt.rs  receipt_claim.rs  segment.rs  sha.rs  translate.rs  verifier.rs
src/circuit/: v1_0.rs  v1_1.rs  v2_0.rs  v2_1.rs  v2_2.rs  v2_3.rs  v3_0.rs
src/circuit/v1_0/: control_id.rs  poly_ext.rs  taps.rs
src/circuit/v1_1/: control_id.rs  poly_ext.rs  taps.rs
src/circuit/v1_2/: poly_ext.rs  taps.rs
src/circuit/v2_0/: poly_ext.rs  taps.rs
src/circuit/v2_1/: taps.rs
src/circuit/v3_0/: taps.rs
src/context/: v1.rs  v2.rs  v3.rs
src/receipt/: composite.rs  merkle.rs  succinct.rs
src/verifier/: extract_po2.rs
tests/: check_risc0_deps.rs  integration.rs
(+38 files in other folders)
