[package]
name = "risc0-verifier"
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/HorizenLabs/risc0-verifier"
authors = ["Horizen <info@horizen.io>"]
description = "A Rust library to verify risc0 STARK proofs"
keywords = ["crypto", "no-std", "blockchain", "cryptography", "risc0"]

[dependencies]
serde = { version = "1.0.215", default-features = false, features = ["derive"] }
ciborium = { version = "0.2.2", default-features = false }
risc0-core = { version = "1.2.0", default-features = false }
risc0-zkp = { version = "1.2.0", default-features = false }
risc0-binfmt = { version = "1.2.0", default-features = false }
risc0-circuit-rv32im = { version = "1.2.0", default-features = false }
risc0-circuit-recursion = { version = "1.2.0", default-features = false }
anyhow = { version = "1.0.93", default-features = false }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
bytemuck = { version = "1.20.0", default-features = false }
log = { version = "0.4.22", default-features = false }
digest = { version = "0.10", features = ["oid"] }

[dev-dependencies]
snafu = { version = "0.8.5", default-features = false }
serde_json = "1.0.114"
hex = "0.4.3"
rstest = "0.23.0"
anyhow = "1.0.93"
ciborium = "0.2.2"
bincode = "1.3"
divan = "0.1.17"
rstest_reuse = "0.7.0"
hex-literal = "0.4.1"

[[bench]]
name = "base"
harness = false

[profile.bench]
debug = true
