[package]
name = "risc0-verifier"
version = "0.6.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/HorizenLabs/risc0-verifier"
authors = ["Horizen <info@horizen.io>"]
description = "A Rust library to verify risc0 STARK proofs"
keywords = ["crypto", "no-std", "blockchain", "cryptography", "risc0"]

[dependencies]
serde = { version = "1.0.217", default-features = false, features = ["derive"] }
risc0-core-v1 = { package = "risc0-core", version = "1.2.6", default-features = false }
risc0-core-v2 = { package = "risc0-core", version = "2.0.0", default-features = false }
risc0-zkp-v1 = { package = "risc0-zkp", version = "1.2.6", default-features = false }
risc0-zkp-v2 = { package = "risc0-zkp", version = "2.0.0", default-features = false }
risc0-binfmt-v1 = { package = "risc0-binfmt", version = "1.2.6", default-features = false }
risc0-circuit-rv32im-v1 = { package = "risc0-circuit-rv32im", version = "1.2.6", default-features = false }
risc0-circuit-rv32im-v2 = { package = "risc0-circuit-rv32im", version = "2.0.2", default-features = false }
anyhow = { version = "1.0.95", default-features = false }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
bytemuck = { version = "1.21.0", default-features = false }
log = { version = "0.4.22", default-features = false }
ciborium = { version = "0.2.2", optional = true }
bincode = { version = "1.3", optional = true }
argh = { version = "0.1.13", optional = true }
bytes = { version = "1.9.0", optional = true }

[dev-dependencies]
snafu = { version = "0.8.5", default-features = false }
serde_json = "1.0.135"
hex = "0.4.3"
rstest = "0.24.0"
anyhow = "1.0.93"
ciborium = "0.2.2"
bincode = "1.3"
divan = "0.1.17"
rstest_reuse = "0.7.0"
# Used in doc test
hex-literal = "0.4.1"

[[bench]]
name = "base"
harness = false

[[bin]]
name = "convert_old"
required-features = ["convert"]

[profile.bench]
debug = true

[features]

convert = ["dep:ciborium", "dep:bincode", "dep:argh", "dep:bytes"]

[package.metadata.cargo-udeps.ignore]
normal = ["hex-literal"]
