[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-zkvm = { version = "=1.1.3", features = ["prove"] }
risc0-zkp = { version = "=1.1.3" }
risc0-circuit-rv32im-sys = { version = "=1.1.3" }
risc0-circuit-recursion-sys = { version = "=1.1.3" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
serde_json = "1.0.133"
ciborium = "0.2.2"
hex-literal = "0.4.1"
hex = "0.4.3"

# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.release]
debug = 1
lto = true
