[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-zkvm = { version = "2.2.0", features = ["prove"] }
risc0-zkp = { version = "2.0.0" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = "1.0.133"
ciborium = "0.2.2"
hex = "0.4.3"
clap = { version = "4.5.30", features = ["derive"] }
tracing = { version = "0.1.41", features = ["log"] }

# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.release]
debug = 1
lto = true
