[package]
name = "method"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "=1.3.0-rc.1", default-features = false, features = [
    'std',
] }
risc0-zkp = { version = "=1.3.0-rc.1", default-features = false }

[package.metadata.cargo-machete]
# Used to fix the version
ignored = ["risc0-zkp"]
