[package]
name = "method"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "3.0.0", default-features = false, features = [
    'std',
] }
risc0-zkp = { version = "3.0.0", default-features = false }

[package.metadata.cargo-machete]
# Used to fix the version
ignored = ["risc0-zkp"]
